# GDEH0169E01

./: .gitignore  README.md  esp_idf_project_configuration.json  partitions.csv
docs/: A32-GDEH0169E01.rar  notes.txt
docs/169inch/: 169inch.ino  image.h  image_custom.h
main/: CMakeLists.txt  Kconfig.projbuild  config.h  epd_169inch.c  epd_169inch.h  epd_169inch_bus.c  epd_169inch_bus.h  hello_world_main.c  image2.h  image_upload.c  image_upload.h  imageme.h  led_ws2812.c  led_ws2812.h  pins.h  scd30_app.c  scd30_app.h
main/img_data/: hithere.sp6  swirls.sp6
spiffs/: app.js  heatshrink.wasm  heatshrink_readme.txt  index.html  styles.css
tools/: convert_and_upload.py  image_to_epd.py  test3.sp6  upload_image.py
tools/heatshrink_wasm/: README.md  heatshrink_wasm.c
